force-app/main/default/objects/RW_Feedback__c/fields/Are_you_happy_with_ease_of_getting_servi__c.field-meta.xml
<CustomField>
    <fullName>Are_you_happy_with_ease_of_getting_servi__c</fullName>
    <description>Are you happy with ease of getting services such as internet, cable TV, milk supply, newspaper etc?</description>
    <inlineHelpText>Are you happy with ease of getting services such as internet, cable TV, milk supply, newspaper etc?</inlineHelpText>
    <label>Are you happy with ease of getting servi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>