force-app/main/default/objects/RW_Feedback__c/fields/Maintenance_services_do_you_have_any_c__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_services_do_you_have_any_c__c</fullName>
    <description>Maintenance services - do you have any concern?</description>
    <inlineHelpText>Maintenance services - do you have any concern?</inlineHelpText>
    <label>Maintenance services - do you have any c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>