force-app/main/default/objects/RW_Feedback__c/fields/RW_Hospitality_by_the_executive__c.field-meta.xml
<CustomField>
    <fullName>RW_Hospitality_by_the_executive__c</fullName>
    <label>ZHospitality by the executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>