force-app/main/default/objects/RW_Feedback__c/fields/RW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>