force-app/main/default/objects/RW_Feedback__c/fields/RW_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Opportunity_Name__c</fullName>
    <formula>RW_Opportunity__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>