force-app/main/default/objects/RW_Feedback__c/fields/RW_Please_rate_the_overall_possession__c.field-meta.xml
<CustomField>
    <fullName>RW_Please_rate_the_overall_possession__c</fullName>
    <description>Please rate the overall possession experience on a scale  of 1 to 5.
1 being poor and 5 being excellent.</description>
    <inlineHelpText>Please rate the overall possession experience on a scale  of 1 to 5.
1 being poor and 5 being excellent.</inlineHelpText>
    <label>Please rate the overall possession exper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>