force-app/main/default/objects/RW_Feedback__c/fields/RW_Rate_Our_Service__c.field-meta.xml
<CustomField>
    <fullName>RW_Rate_Our_Service__c</fullName>
    <label>ZRate Our Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>