force-app/main/default/objects/RW_Feedback__c/fields/RW_Tell_us_about_our_service__c.field-meta.xml
<CustomField>
    <fullName>RW_Tell_us_about_our_service__c</fullName>
    <label>ZTell us about our service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>