force-app/main/default/objects/RW_Feedback__c/fields/RW_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_Name__c</fullName>
    <formula>RW_Opportunity__r.RW_Project_Unit__r.Name</formula>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>