force-app/main/default/objects/RW_Feedback__c/fields/RW_Was_the_apartment_cleaning_done_befor__c.field-meta.xml
<CustomField>
    <fullName>RW_Was_the_apartment_cleaning_done_befor__c</fullName>
    <description>Was the apartment cleaning done before handover?</description>
    <inlineHelpText>Was the apartment cleaning done before handover?</inlineHelpText>
    <label>Was the apartment cleaning done before h</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>