force-app/main/default/objects/RW_Feedback__c/fields/RW_Was_the_quality_of_finishing_sati__c.field-meta.xml
<CustomField>
    <fullName>RW_Was_the_quality_of_finishing_sati__c</fullName>
    <description>Was the quality of finishing satisfactory?</description>
    <inlineHelpText>Was the quality of finishing satisfactory?</inlineHelpText>
    <label>Was the quality of finishing satis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>