force-app/main/default/objects/RW_Feedback__c/fields/RW_Was_your_possession_docum_process__c.field-meta.xml
<CustomField>
    <fullName>RW_Was_your_possession_docum_process__c</fullName>
    <description>Was your possession documentation process handled well?</description>
    <inlineHelpText>Was your possession documentation process handled well?</inlineHelpText>
    <label>Was your possession docum process?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>