force-app/main/default/objects/RW_Feedback__c/fields/RW_Were_all_commitments_made_at_time__c.field-meta.xml
<CustomField>
    <fullName>RW_Were_all_commitments_made_at_time__c</fullName>
    <description>Were all commitments made at the time of booking met with at the time of possession?</description>
    <inlineHelpText>Were all commitments made at the time of booking met with at the time of possession?</inlineHelpText>
    <label>Were all commitments made at the time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>