force-app/main/default/objects/RW_Feedback__c/fields/RW_Were_your_concerns_during_pre_poss__c.field-meta.xml
<CustomField>
    <fullName>RW_Were_your_concerns_during_pre_poss__c</fullName>
    <description>Were your concerns during pre-possession inspection resolved at the time of possession?</description>
    <inlineHelpText>Were your concerns during pre-possession inspection resolved at the time of possession?</inlineHelpText>
    <label>Were your concerns during pre-possession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>