force-app/main/default/objects/RW_Feedback__c/fields/RW_Would_you_refer_Runwal_projects_to__c.field-meta.xml
<CustomField>
    <fullName>RW_Would_you_refer_Runwal_projects_to__c</fullName>
    <description>Would you refer Runwal projects to your friends &amp; family?</description>
    <inlineHelpText>Would you refer Runwal projects to your friends &amp; family?</inlineHelpText>
    <label>Would you refer Runwal project to Friend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>