force-app/main/default/objects/RW_Feedback__c/fields/Was_the_infrastructure_satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Was_the_infrastructure_satisfactory__c</fullName>
    <description>Was the infrastructure (access, lifts, lobby, security, water &amp; electric connection etc.) satisfactory?</description>
    <inlineHelpText>Was the infrastructure (access, lifts, lobby, security, water &amp; electric connection etc.) satisfactory?</inlineHelpText>
    <label>Was the infrastructure satisfactory?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>